Fixed bug on mobile

--- a/client/src/Pages/Settings/Settings.css
+++ b/client/src/Pages/Settings/Settings.css
@@ -8,6 +8,7 @@
     align-content: stretch;
     background: #f2f2f2;
     width: 500px;
+    max-width: 100%;
     min-height: 630px;
     border-radius: 5px;
 }
@@ -19,6 +20,7 @@
 .Settings>div {
     margin: 0 auto;
     width: 500px;
+    max-width: 100%;
 }
 
 .col {
